syntax = "proto3";

package user_auth;

option csharp_namespace = "Parstech.Shop.Shared.Protos.UserAuth";

service UserAuthService {
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc ProtectData (ProtectDataRequest) returns (ProtectDataResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
  bool remember_me = 3;
}

message LoginResponse {
  bool is_successful = 1;
  string message = 2;
  string redirect_url = 3;
  string protected_data = 4;
  bool is_locked_out = 5;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone_number = 4;
  string first_name = 5;
  string last_name = 6;
}

message RegisterResponse {
  bool is_successful = 1;
  string message = 2;
  repeated ValidationError errors = 3;
}

message ValidationError {
  string property_name = 1;
  string error_message = 2;
}

message ProtectDataRequest {
  string data = 1;
  string purpose = 2;
}

message ProtectDataResponse {
  string protected_data = 1;
} 